--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -34,11 +34,20 @@
 
           <!-- Toolbar Buttons -->
           <StackPanel Grid.Column="3" Margin="8,0,0,0" Orientation="Horizontal" VerticalAlignment="Center">
-            <Button Classes="icon_button" Width="32" Command="{Binding IncrUnified}" IsVisible="{Binding IsTextDiff}" ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Incr}">
+            <Button Classes="icon_button" 
+                    Width="32" 
+                    Command="{Binding IncrUnified}" 
+                    IsVisible="{Binding IsTextDiff}"
+                    ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Incr}">
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Lines.Incr}"/>
             </Button>
 
-            <Button Classes="icon_button" Width="32" Command="{Binding DecrUnified}" IsVisible="{Binding IsTextDiff}" ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Decr}" IsEnabled="{Binding Unified, Converter={x:Static c:IntConverters.IsGreaterThanFour}}">
+            <Button Classes="icon_button" 
+                    Width="32" 
+                    Command="{Binding DecrUnified}" 
+                    IsVisible="{Binding IsTextDiff}" 
+                    ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Decr}" 
+                    IsEnabled="{Binding Source={x:Static vm:Preference.Instance}, Path=DiffViewVisualLineNumbers, Converter={x:Static c:IntConverters.IsGreaterThanFour}}">
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Lines.Decr}"/>
             </Button>
 
