--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -1306,6 +1306,9 @@
   </Style>
 
   <Style Selector="TreeDataGridRow">
+    <Style.Resources>
+      <SolidColorBrush x:Key="TreeDataGridSelectedCellBackgroundBrush" Color="{DynamicResource SystemAccentColor}" Opacity="0.4" />
+    </Style.Resources>
     <Setter Property="Background" Value="Transparent"/>
   </Style>
   
