--- a/src/Views/LFSPush.axaml
+++ b/src/Views/LFSPush.axaml
@@ -5,12 +5,12 @@
              xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="SourceGit.Views.LFSFetch"
-             x:DataType="vm:LFSFetch">
+             x:Class="SourceGit.Views.LFSPush"
+             x:DataType="vm:LFSPush">
   <StackPanel Orientation="Vertical" Margin="8,0">
     <TextBlock FontSize="18"
                Classes="bold"
-               Text="{DynamicResource Text.GitLFS.Fetch.Title}"/>
+               Text="{DynamicResource Text.GitLFS.Push.Title}"/>
 
     <Grid Margin="0,16,0,0" RowDefinitions="32,Auto" ColumnDefinitions="120,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
@@ -31,9 +31,9 @@
           </DataTemplate>
         </ComboBox.ItemTemplate>
       </ComboBox>
-      
-      <TextBlock Grid.Row="1" Grid.Column="1" 
-                 Text="{DynamicResource Text.GitLFS.Fetch.Tips}"
+
+      <TextBlock Grid.Row="1" Grid.Column="1"
+                 Text="{DynamicResource Text.GitLFS.Push.Tips}"
                  Margin="0,8,0,0"
                  TextWrapping="Wrap"/>
     </Grid>
